--- a/example/android/app/src/main/res/values/strings.xml
+++ b/example/android/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
   <string name="title_activity_fullscreen">FullscreenActivity</string>
   <string name="dummy_button">Dummy Button</string>
   <string name="dummy_content">DUMMY\nCONTENT</string>
+  <!-- START to integrate Unity -->
+  <string name="game_view_content_description">Game View</string>
+  <!-- END to integrate Unity -->
 </resources>
