--- a/example/android/app/src/main/res/values/strings.xml
+++ b/example/android/app/src/main/res/values/strings.xml
@@ -1,9 +1,22 @@
 <resources>
-    <string name="app_name">RetailGenAI</string>
-    <string name="title_activity_fullscreen">RetailGenAI</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
-    <!-- START to integrate Unity -->
-    <string name="game_view_content_description">RetailGenAI</string>
-    <!-- END to integrate Unity -->
+  <string name="app_name">RetailGenAI</string>
+  <string name="title_activity_fullscreen">RetailGenAI</string>
+  <string name="dummy_button">Dummy Button</string>
+  <string name="dummy_content">DUMMY\nCONTENT</string>
+  <!-- START to integrate Unity -->
+  <string name="game_view_content_description">RetailGenAI</string>
+  <!-- END to integrate Unity -->
+
+
+  <string name="recognize_file">Recognize File</string>
+  <string name="recognize_microphone">Recognize Microphone</string>
+  <string name="stop_microphone">Stop Microphone</string>
+  <string name="preparing">Preparing the recognizer\n</string>
+  <string name="ready">Ready\n</string>
+  <string name="failed">Failed to init recognizer %s\n</string>
+  <string name="starting">Starting\n</string>
+  <string name="say_something">Say something\n</string>
+  <string name="stop_file">Stop File</string>
+  <string name="pause">Pause</string>
+  <string name="continueRecognition">Continue</string>
 </resources>
